<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_my_rewards">My Rewards</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_my_wishlist">My Wishlist</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_signout">Sign out</string>
    <string name="menu_my_home">Home</string>
    <string name="menu_search">search</string>
    <string name="menu_notification">notification</string>

</resources>